--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -16,6 +16,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->        
+
 </head>
 
 <body>
@@ -31,13 +32,17 @@
       {{else}}
         <p>No tasks to show!</p>
       {{/if}}
+      <form id='taskForm' action='/addTask' method='post'>
+        <label for='addTask'>Add a task</label>
+        <input id='addTask' name='taskName' placeholder='New Task' />
+        <button type='submit' class='btn btn-primary'>Submit</button>
+      </form>
     </div>
   </div>
 
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/canvas-to-blob.min.js"></script>
-  <script src="/js/introHCI.js"></script>
   <script src="/js/tasks.js"></script>
 </body>
 </html>
